Testing navbar-fixed-top as per https://stackoverflow.com/questions/18264944/bootstrap-3-navbar-fixed-top-stay-fixed-in-mobile-view

--- a/static/custom.css
+++ b/static/custom.css
@@ -7,3 +7,15 @@ html {
     font-size: 18px;
 }
 
+@media (max-width: 767px) {
+    .navbar-fixed-top {
+        position: relative;
+        top: auto;
+    }
+    .navbar-collapse {
+        max-height: none;
+    }
+    body {
+        margin: 0;
+    }
+}
